stylesheet.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

body {
    font-family: Roboto, sans-serif;
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
}

button {
    color: #e8e8e8;
    background-color: #0383fc;
    border-radius: 10px;
    border: 2px solid #e8e8e8;
    font-size: 16px;
    font-weight: 500;
    width: 150px;
    height: 50px;
}

button:hover {
    background-color: #168eff;
    cursor: pointer;
}

.content {
    display: flex;
    flex-direction: column;
    background-color: #e8e8e8;
    align-items: center;
    padding: 32px;
    border-radius: 20px;
    gap: 16px;
    width: 300px;
    margin-top: 16px;
}

.number-input,
.guess-button {
    flex: 0 0 auto;
}

.number-input {
    width: 200px;
    text-align: center;
    font-size: 24px;
    border-radius: 20px;
}

.content.win,
.content.guesses {
    display: flex;
    visibility: collapse;
}

.content.win {
    background-color: #c8ffe1;
    /* visibility: collapse; */
}

.content.guesses {
    flex-direction: column;
    margin-bottom: 16px;
}

.guess {
    display: flex;
    flex-direction: row;
    flex: 0 0 auto;
    width: 200px;
    justify-content: space-between;
    align-items: center;
    background-color: #d8d8d8;
    padding: 16px 32px 16px 32px;
    border-radius: 20px;
}
.guess-number {
    font-size: 20px;
    font-weight: 800;
}
.guess-matches {
    font-size: 15px;
    font-weight: 300;
    text-align: right;
}

